--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,6 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In velit, dolorem rerum quasi architecto recusandae quibusdam adipisci molestiae itaque numquam iure eius laborum iusto iste similique voluptatem porro alias facere!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In velit, dolorem rerum quasi architecto recusandae quibusdam adipisci molestiae itaque numquam iure eius laborum iusto iste similique voluptatem porro alias facere muito bom kkkk!</p>
 </body>
 </html>
